<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1603A9F4"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:padding="7dp"
            android:text="@string/events" />

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_event"
            android:inputType="text"
            android:maxLength="40"
            android:maxLines="1"
            android:textColor="#7E03A9F4"
            android:textColorHint="#7E03A9F4"
            android:drawablePadding="7dp"
            android:hint="@string/event_name"
            android:importantForAutofill="no"
            android:padding="7dp" />

        <EditText
            android:id="@+id/participants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_people"
            android:drawablePadding="7dp"
            android:inputType="textMultiLine"
            android:maxLength="50"
            android:maxLines="2"
            android:hint="@string/participants"
            android:textColor="#7E03A9F4"
            android:textColorHint="#7E03A9F4"
            android:importantForAutofill="no"
            android:padding="7dp" />

        <EditText
            android:id="@+id/participation_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="7dp"
            android:inputType="text"
            android:maxLength="20"
            android:maxLines="1"
            android:hint="@string/participation_time"
            android:importantForAutofill="no"
            android:textColor="#7E03A9F4"
            android:textColorHint="#7E03A9F4"
            android:padding="7dp" />

        <Button
            android:id="@+id/add_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#1603A9F4"
            android:textColor="#7E03A9F4"
            android:text="@string/add_event" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>