<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".EventActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1603A9F4"
        android:gravity="center"
        android:orientation="vertical">
        <TextView
            android:id="@+id/event_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_event"
            android:drawablePadding="7dp"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="#7E03A9F4"
            android:text="@string/name"
            android:textSize="25sp" />


        <TextView
            android:id="@+id/participants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_people"
            android:drawablePadding="7dp"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="#7E03A9F4"
            android:text="@string/participants"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/participation_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_time"
            android:drawablePadding="7dp"
            android:padding="7dp"
            android:textColor="#7E03A9F4"
            android:text="@string/time"
            android:textSize="25sp" />
    </LinearLayout>
</RelativeLayout>